--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ label, #label {
     text-align: right;
 }
 
-#male, #female {
+#standard, #vegetarian {
     margin-top: 25px;
     margin-right: 0px;
     width: 15px;
