--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ a {
 #body {
     width: 100%;
     min-height: 80%;
+    height: 80%;
     overflow: hidden;
     display: flex;
 }
@@ -60,6 +61,7 @@ a {
     padding-top: 10px;
     flex-grow: 1;
     flex-shrink: 1;
+    overflow: scroll;
 }
 
 #sidebar {
@@ -142,7 +144,6 @@ input:invalid {
 }
 
 table {
-
     margin-left: 10px;
     table-layout: fixed;
     display: inline-block;
@@ -168,46 +169,90 @@ th, td {
 
 #gridContainer {
     margin: 10px;
-    display: grid;
     width: 100%;
     background-color: #FFDFC5;
-    grid-template: 100px 1fr / 1fr 1fr 1fr 1fr;
-    grid-gap: 10px;
+    height: 100%;
+    overflow: scroll;
+}
+
+
+#cakeWrapper {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+}
+
+#cakeSelector {
+    background-color: #AF8DE3;
+    width: 50%;
+}
+
+#cakeDisplay {
+    background-color: floralwhite;
+    width: 25%;
+}
+
+#cakeOrder {
+    background-color: #AF8DE3;
+    width: 25%;
+}
+
+
+@supports (grid-area: auto) {
+
+    #gridContainer {
+        display: grid;
+        grid-template-rows: 100px 1fr;
+        height: auto;
+    }
+
+    #cakeWrapper {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 10px;
+        height: auto;
+    }
+
+    #cakeSelector {
+        width: 100%;
+        
+    }
+
+    #cakeDisplay {
+        width: auto;
+    } 
+
+    #cakeOrder {
+        width: auto;
+    }
 }
 
 #cakeText {
     background-color: #733FBF;
     color: #AF8DE3; 
-    grid-column: 1 / 5;
 }
 
 .cake {
     color: #AF8DE3;
 }
 
-#cakeSelector {
-    background-color: #AF8DE3;
-    grid-column: 1 / 3;
-}
+
 
 #cakeList {
-    
     margin-right: 10px;
 }
 
-.cakeList {
-    width: 100%;
+.cakeList, .cakeList input {
+    width: unset;
     border: hidden;
 }
 
-#cakeDisplay {
-    background-color: floralwhite;
+.cakeQuantity {
+   width: unset;
+    border: hidden;
 }
-
-#cakeOrder {
-    background-color: #AF8DE3;
-}
-
 
 
 
