added game reset function, subdivded css file

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ a {
 
 
 #mainText {
-    background-color: #FFDFC5;
+    background-color: whitesmoke;
     padding-left: 20px;
     padding-top: 10px;
     flex-grow: 1;
@@ -83,254 +83,4 @@ p {
     padding: 10px 20px;
 
 }
-
-/* example 1*/
-
-form {
-    padding: 20px;
-    display: inline-block;
-}
-
-legend {
-    background-color: #974400;
-    color: white;
-    padding: 5px;
-    border-color: #ED7C1E;
-}
-
-fieldset {
-    background-color: #FA9A4B;
-    width: 350px;
-}
-
-
-input, select {
-    margin: 10px;
-    padding-left: 10px;
-    width: 150px;
-    
-}
-
-label, #label {
-    margin: 10px;
-    padding-left: 10px;
-    padding-right: 0px;
-    display: inline-block;
-    width: 100px;
-    text-align: right;
-}
-
-#standard, #vegetarian {
-    margin-top: 25px;
-    margin-right: 0px;
-    width: 15px;
-}
-
-.radioLabel {
-    padding-left: 0px;
-    margin-left: 0px;
-    text-align: left;
-    width: 50px;
-}
-
-.formButton {
-    padding-left: 0px;
-    margin-left: 142px;
-    width: 164px;
-}
-
-input:invalid {
-    border-color: #ED7C1E;
-}
-
-table {
-    margin-left: 10px;
-    table-layout: fixed;
-    display: inline-block;
-    padding: 10px;
-    border-collapse: collapse;
-    border: solid #ED7C1E;
-}
-
-thead {
-    font-size: 0.9em;
-}
-
-th, tr, td {
-    padding: 10px;
-    border: 1px solid black;
-}
-
-th, td {
-    width: 70px;
-}
-
-/* example 2 */
-
-#gridContainer {
-    margin: 10px;
-    width: 100%;
-    background-color: #FFDFC5;
-    height: 100%;
-    overflow: scroll;
-}
-
-
-#cakeWrapper {
-    margin-top: 10px;
-    display: flex;
-    flex-direction: row;
-    height: 100%;
-}
-
-#cakeSelector {
-    background-color: #AF8DE3;
-    width: 33%;
-}
-
-#cakeDisplay {
-    background-color: floralwhite;
-    width: 33%;
-}
-
-#cakeOrder {
-    background-color: #AF8DE3;
-    width: 33%;
-}
-
-
-@supports (grid-area: auto) {
-
-    #gridContainer {
-        display: grid;
-        grid-template-rows: 100px 1fr;
-        height: auto;
-    }
-
-    #cakeWrapper {
-        width: 100%;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 10px;
-        height: auto;
-    }
-
-    #cakeSelector {
-        width: 100%;
-        
-    }
-
-    #cakeDisplay {
-        width: auto;
-    } 
-
-    #cakeOrder {
-        width: auto;
-    }
-}
-
-#clearOrder {
-    margin: 10px 20px;
-    padding: 5px;
-}
-
-#cakeText {
-    background-color: #733FBF;
-    color: #AF8DE3; 
-}
-
-.cake {
-    color: #AF8DE3;
-}
-
-
-
-#cakeList {
-    margin-right: 10px;
-}
-
-.cakeList {
-    width: auto;
-    border: hidden;
-}
-
-.cakeList input {
-    width: 50px;
-}
-
-
-
-.cakeQuantity {
-    width: unset;
-    border: hidden;
-}
-
-/* Palette URL: http://paletton.com/#uid=10u0u0kr+tLhoC8mpvkuqnZzhiX */
-/* Palette URL: http://paletton.com/#uid=30V0I0kntBVdnQ0iVIDsxxovGqj */
-
-/*example 3*/
-
-p.colorPicker {
-    margin-top: 70px;
-    margin-left: 10px;
-    padding: 10px 10px;
-    width: auto;
-    display: inline-block;
-}
-
-canvas.colorPicker {
-    margin-left: 15px;
-}
-
-p.gameField {
-    width: 20px;
-    padding: 0px 10px;
-    margin: 0px;
-    vertical-align: middle;
-    display: table-cell;
-}
-
-#winner {
-    width: 400px;
-    color: white;
-}
-
-.gameRow {
-    height: 50px;
-    display: table;
-    width: 100%;
-}
-
-.gameRow button {
-    vertical-align: top;
-    margin: 15px 20px;
-}
-
-#solution {
-    background-color: purple;
-    min-width: 800px;
-}
-
-#colorPicker {
-    background-color: grey;
-}
-
-#gameBoard {
-    background-color: grey;
-    min-width: 800px;
-}
-
-    @supports (grid-area: auto) {
-        #grid {
-            display: grid;
-            grid-template: 50px 1fr / 70px 1fr;
-            grid-gap: 10px;
-            height: 100%;
-        }
-
-        #colorPicker {
-            grid-column: 1;
-            grid-row: 1 / 3;
-        }
-    }
 
