added sound and scoring

--- a/example4.css
+++ b/example4.css
@@ -209,3 +209,12 @@
     z-index: 1;
 }
 
+#bottomPanel {
+    background-color: dimgrey;
+    width: 100%;
+}
+
+.bestScores {
+    color: forestgreen;
+    font-weight: bold;
+}
