--- a/example4.css
+++ b/example4.css
@@ -12,7 +12,7 @@
     position: relative;
     max-width: 1600px;
     min-width: 850px;
-    background-image: url('images/background-blank-blue-132204.jpg');
+    background-color: cadetblue;
     border: 5px double black;
     margin: 5px;
 }
@@ -56,6 +56,7 @@
 
     #gameArea {
         margin: 30px;
+        background-image: url('images/background-blank-blue-132204.jpg');
     }
 }
 
