--- a/css/style-subpages.css
+++ b/css/style-subpages.css
@@ -1,8 +1,8 @@
 header {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     max-height: 10%;
-    min-height: 70px;
+    min-height: 7rem;
     color: #fff;
     background-image: linear-gradient(
         to bottom, 
@@ -13,25 +13,25 @@ header {
 @media screen and (min-width: 1000px) {
 
     h1 {
-        font-size: 30px;
-        padding: 10px 20px;
+        font-size: 3rem;
+        padding: 1rem 2rem;
     }
 
     a {
-        font-size: 14px;
+        font-size: 1.4rem;
+        margin: 1.3rem;
     }
 }
 
 a:link,
 a:visited {
-    margin: 13px;
-    padding: 3px 13px;
+    padding: .3rem 1.3rem;
     float: left;
     color: rgb(5, 102, 21);
     text-transform: uppercase;
     text-decoration: none;
-    border: 1px solid rgb(5, 102, 21);
-    border-radius: 100px;
+    border: .1rem solid rgb(5, 102, 21);
+    border-radius: 10rem;
     transition: all 1s;
     animation: appear 2s 4s;
     animation-fill-mode: backwards;
@@ -42,9 +42,9 @@ a:hover {
     color:rgb(255, 255, 255);
 }
 
-#mainText {
-    padding-left: 20px;
-    padding-top: 10px;
+.mainText {
+    padding-left: 2rem;
+    padding-top: 1rem;
     flex-grow: 1;
     flex-shrink: 1;
     overflow: auto;
@@ -52,30 +52,26 @@ a:hover {
 
 .sidebar {
     color: rgb(5, 102, 21);
-    flex: 0 0 60px;
+    flex: 0 0 6rem;
     float: right;
     text-align: center;
     padding-top: 20vh;
 }
 
 .sidebar p {
-    width: 60px;
-    font-size: 20px;
-    letter-spacing: 5px;
-    margin-bottom: 50px;
+    width: 6rem;
+    font-size: 2rem;
+    letter-spacing: .5rem;
+    margin-bottom: 5rem;
     transform: rotate(90deg);
 }
 
-h2 {
-    padding: 10px 20px;
-}
-
-p {
-    padding: 10px 20px;
+h2, p {
+    padding: 1rem 2rem;
 }
 
 footer p {
-    padding: 0px;
+    padding: 0;
 }
 
 #messageBox {
@@ -85,9 +81,9 @@ footer p {
     left: 40%;
     top: 40%;
     background-color: orange;
-    border: 5px double grey;
-    width: 350px;
-    height: 100px;
+    border: .5rem double grey;
+    width: 35rem;
+    height: 10rem;
 }
 
 #messageBox span {
@@ -95,12 +91,12 @@ footer p {
     font-size: 2em;
     font-weight: bold;
     float: right;
-    padding: 5px;
+    padding: .5rem;
 }
 
 #messageBox p {
     margin: 5% auto;
-    width: 300px;
+    width: 30rem;
     color: darkslategrey;
 }
 
