--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,8 @@ h2 {
 @media screen and (max-width: 999px) {
 
     h1 {
-        font-size: 4rem;
-        padding: 2rem;
+        font-size: 2rem;
+        padding: 1rem;
     }
 
     #mainText {
@@ -58,7 +58,8 @@ h2 {
     }
 
     a {
-        font-size: 3rem;
+        font-size: 1rem;
+        margin: .5rem;
     }
 }
 
