--- a/css/example1.css
+++ b/css/example1.css
@@ -3,7 +3,6 @@
 }
 
 form {
-    padding: 20px;
     display: inline-block;
 }
 
@@ -20,42 +19,22 @@ legend {
 
 fieldset {
     background-color: #FA9A4B;
-    width: 450px;
-}
-
-
-input, select {
-    margin: 10px;
-    padding-left: 10px;
-    width: 150px;
 }
 
 label, #label {
-    margin: 10px;
-    padding-left: 10px;
     padding-right: 0px;
     display: inline-block;
-    width: 150px;
     text-align: right;
-}
-
-#standard, #vegetarian {
-    margin-top: 25px;
-    margin-right: 0px;
-    width: 15px;
 }
 
 .radioLabel {
     padding-left: 0px;
     margin-left: 0px;
     text-align: left;
-    width: 60px;
 }
 
 .formButton {
     padding-left: 0px;
-    margin-left: 180px;
-    width: 164px;
 }
 
 input:invalid {
@@ -80,6 +59,88 @@ th, tr, td {
     border: 1px solid black;
 }
 
-th, td {
-    width: 110px;
+
+
+@media only screen and (max-width: 799px) {
+
+    form {
+        padding: 10px;
+    }
+
+    fieldset {
+        width: 300px;
+        font-size: 1rem;
+    }
+
+    input, select {
+        margin: 5px;
+        padding-left: 5px;
+        width: 140px;
+    }
+
+    label, #label {
+        margin: 5px;
+        padding-left: 5px;
+        width: 100px;
+    }
+    
+    #standard, #vegetarian {
+        margin-top: 5px;
+        width: 10px;
+    }
+    
+    .radioLabel {
+        width: 50px;
+    }
+    
+    .formButton {
+        margin-left: 120px;
+        width: 140px;
+    }
+
+    th, td {
+        font-size: .8rem;
+        width: 50px;
+    }
+}
+
+@media only screen and (min-width: 800px) {
+
+    form {
+        padding: 20px;
+    }
+
+    fieldset {
+        width: 450px;
+    }
+
+    input, select {
+        margin: 10px;
+        padding-left: 10px;
+        width: 150px;
+    }
+
+    label, #label {
+        margin: 10px;
+        padding-left: 10px;
+        width: 150px;
+    }
+    
+    #standard, #vegetarian {
+        margin-top: 25px;
+        width: 15px;
+    }
+    
+    .radioLabel {
+        width: 60px;
+    }
+    
+    .formButton {
+        margin-left: 180px;
+        width: 164px;
+    }
+
+    th, td {
+        width: 110px;
+    }
 }
