--- a/css/example3.css
+++ b/css/example3.css
@@ -90,3 +90,13 @@ p.gameField {
 .sideText a:hover {
     background-color: #fff;
 }
+
+@media only screen and (max-width: 799px) {
+    #grid {
+        transform: scale(.5);
+        position: absolute;
+        top: -10rem;
+        left: -27rem;
+    }
+
+}
