--- a/css/sky.css
+++ b/css/sky.css
@@ -6,12 +6,31 @@ body {
     display: block;
     position: relative;
     width: 100%;
-    height: 50vh;
     text-align: center;
     animation-name: sky;
     animation-duration: 40s;
     animation-iteration-count: infinite;
     transition: all 5s;
+}
+
+@media only screen and (max-width: 799px) {
+    .sky {
+        height: 35vh; 
+    }
+
+    .mobile-only {
+        opacity: 1;
+    }
+}
+
+@media only screen and (min-width: 800px) {
+    .sky {
+        height: 50vh; 
+    }
+
+    .mobile-only {
+        opacity: 0;
+    }
 }
 
 .blur {
