--- a/css/style-subpages.css
+++ b/css/style-subpages.css
@@ -10,16 +10,40 @@ header {
         rgb(255, 255, 255));  
 }
 
-@media screen and (min-width: 1000px) {
+@media only screen and (min-width: 800px) {
+
+    body {
+        padding: 2rem;
+    }
 
     h1 {
-        font-size: 3rem;
-        padding: 1rem 2rem;
+        font-size: 2rem;
+        padding: 1rem 1rem;
     }
 
     a {
         font-size: 1.4rem;
         margin: 1.3rem;
+    }
+
+    .sidebar {
+        flex: 0 0 6rem;
+    }
+
+    .sidebar p {
+        width: 6rem;
+        font-size: 2rem;
+        letter-spacing: .5rem;
+        margin-bottom: 5rem;
+        transform: rotate(90deg);
+    }
+
+    .mainText {
+        padding-left: 2rem;
+    }
+
+    h2, p {
+        padding: 1rem 2rem;
     }
 }
 
@@ -43,7 +67,6 @@ a:hover {
 }
 
 .mainText {
-    padding-left: 2rem;
     padding-top: 1rem;
     flex-grow: 1;
     flex-shrink: 1;
@@ -52,23 +75,16 @@ a:hover {
 
 .sidebar {
     color: rgb(5, 102, 21);
-    flex: 0 0 6rem;
     float: right;
     text-align: center;
     padding-top: 20vh;
 }
 
 .sidebar p {
-    width: 6rem;
-    font-size: 2rem;
-    letter-spacing: .5rem;
-    margin-bottom: 5rem;
     transform: rotate(90deg);
 }
 
-h2, p {
-    padding: 1rem 2rem;
-}
+
 
 footer p {
     padding: 0;
