--- a/css/intro.css
+++ b/css/intro.css
@@ -16,19 +16,30 @@
     h1 {
         font-size: 3rem;
         padding: 3rem;
+        height: 75%;
+    }
+
+    a {
+        margin: 2rem 1.5rem;
+        padding: .5rem 1.5rem;
     }
 }
 
 @media screen and (max-width: 999px) {
-    header {
-        min-width: 100rem;
+    h1 {
+        height: 60%;
+    }
+
+    a {
+        margin: .4rem;
+        padding: 2px;
+        transform: translateY(-1rem);
     }
 }
 
 a:link,
 a:visited {
-    margin: 2rem 1.5rem;
-    padding: .5rem 1.5rem;
+    
     float: left;
     color: #fff;
     background-color: rgba(5, 102, 21, 0.7);
@@ -47,7 +58,7 @@ a:hover {
 }
 
 h1 {
-    height: 75%;
+    
     background-image: linear-gradient(
         to right bottom, 
         rgba(5, 102, 21, 0.8),
