--- a/css/sky.css
+++ b/css/sky.css
@@ -11,6 +11,7 @@ body {
     animation-duration: 40s;
     animation-iteration-count: infinite;
     transition: all 5s;
+    overflow: hidden;
 }
 
 @media only screen and (max-width: 799px) {
@@ -101,8 +102,9 @@ body {
     float: left;
     margin-top: 15vh;
     animation-name: rain;
-    animation-duration: 50s;
+    animation-duration: 80s;
     animation-iteration-count: infinite;
+    animation-timing-function: ease-in;
     transition: all .5s;
 }
 
@@ -110,7 +112,7 @@ body {
     font-size: 9rem;
     position: absolute;
     animation-name: cloud-rain;
-    animation-duration: 50s;
+    animation-duration: 80s;
     animation-iteration-count: infinite;
     transition: all .5s;
  }
@@ -120,7 +122,7 @@ body {
     float: left;
     font-size: 2rem;
     animation-name: drop-rain;
-    animation-duration: 50s;
+    animation-duration: 80s;
     animation-iteration-count: infinite;
     transition: all .5s;
 }
@@ -138,6 +140,28 @@ body {
 .drop--3 {
     transform: translate(4.7rem, .3rem);
     animation-timing-function: ease-out;
+}
+
+.rainbow {
+    width: 50vw;
+    height: 25vw;
+    position: absolute;
+    bottom: 0;
+    right: 10vw;
+    background-image: radial-gradient(circle at bottom, 
+                        transparent 45%, 
+                        rgba(144, 0, 255, 0.7) 47%,
+                        rgba(76, 0, 130, 0.7) 49%,
+                        rgba(0, 0, 255, 0.7) 51%,
+                        rgba(0, 255, 0, 0.7) 53%,
+                        rgba(255, 255, 0, 0.7) 55%,
+                        rgba(255, 128, 0, 0.7) 57%,
+                        rgba(255, 0, 0, 0.7) 59%,
+                        transparent 61%);
+    animation-name: rainbow;
+    animation-duration: 80s;
+    animation-iteration-count: infinite;
+    transition: all .5s;
 }
 
 .star {
@@ -323,51 +347,55 @@ body {
 }
 
 @keyframes rain {
-    0% {
-        left: 5vw;
+    50% {
+        left: 6vw;
         transform: scale(1);
     }
 
-    5% {
-        left: 10vw;
+    51% {
+        left: 6vw;
         transform: scale(1);
     }
 
-    30% {
+    62% {
         left: 60vw;
         transform: scale(.9);
     }
 
-    50% {
-        left: 85vw;
+    75% {
+        left: 90vw;
         transform: scale(.4);
     }
 
     100% {
-        left: 90vw;
+        left: 95vw;
         transform: scale(1);
     }
 }
 
 
 @keyframes cloud-rain {
-    0% {
+    0% {    
+        color:transparent;   
+    }
+   
+    50% {
         color:transparent;
     }
 
-    5% {
+    58% {
         color: rgba(64, 64, 64, 0.8);
     }
 
-    40% {
+    65% {
         color: rgba(153, 153, 153, 0.8);
     }
 
-    50% {
+    70% {
         color: rgba(153, 153, 153, 0.3);
     }
 
-    60% {
+    75% {
         color: transparent;
     }
 
@@ -379,18 +407,22 @@ body {
 @keyframes drop-rain {
     0% {    
         color:transparent;   
+    } 
+ 
+    50% {    
+        color:transparent;   
     }
 
-    5% {   
+    52% {   
         color: rgb(37, 49, 160);    
     }
 
-    20% {   
+    59% {   
         margin-top: 4.5rem;
         color: rgb(37, 49, 160);    
     }
 
-    40% {
+    68% {
         margin-top: 20rem;
         color: transparent;
     }
@@ -400,3 +432,32 @@ body {
     }
 }
 
+@keyframes rainbow {
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    60% {
+        opacity: 0;
+    }
+
+    63% {
+        opacity: .3;
+    }
+
+    65% {
+        opacity: .7;
+    }
+
+    74% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
