--- a/css/intro.css
+++ b/css/intro.css
@@ -57,6 +57,17 @@ a:hover {
     color:rgb(5, 102, 21);
 }
 
+#demo2:link,
+#demo2:visited {
+    background-color: rgba(184, 2, 190, 0.7);
+    color: #fff;
+}
+
+#demo2:hover {
+    background-color: rgba(255, 255, 255, 0.7);
+    color: #b802be;
+}
+
 h1 {
     
     background-image: linear-gradient(
